--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,24 +1,27 @@
-header, .project:not(:last-child) {
-  border-bottom: 1px solid #ccc;
+header, a, li, .navbar {
+  background-color: #280f00;
+  color: antiquewhite;
+  text-decoration: none;
 }
 
-.no-button {
+body {
+  background-color: antiquewhite;
+}
+
+/* .no-button {
   background: none;
   border: none;
   padding: 0;
   cursor: pointer;
-  color: #1b89bc;
+  color: #280f00;
   text-decoration: none;
   font-size: 100%;
 }
 
 .no-button:hover {
-  color: #065b83;
-  text-decoration: underline;
-}
+  color: #280f00;
+  text-decoration: none;
+} */
 
-.dollar-amount {
-  color: #056605;
-  font-weight: bold;
-  margin-left: -5px;
-}
+
+
